--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,18 +93,20 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_CLIENT_PORT:-2181}
       ZOOKEEPER_TICK_TIME: ${ZOOKEEPER_TICK_TIME:-2000}
+      ALLOW_ANONYMOUS_LOGIN: "yes"
     ports:
-      - "${ZOOKEEPER_PORT:-2181}:${ZOOKEEPER_CLIENT_PORT:-2181}"
+      - "${ZOOKEEPER_PORT:-2181}:2181"
     volumes:
       - zookeeper_data:/var/lib/zookeeper/data
+      - zookeeper_data:/var/lib/zookeeper/log
     networks:
       - fabric-network
     healthcheck:
-      test: ["CMD-SHELL", "echo ruok | nc localhost 2181 | grep imok"]
+      test: ["CMD-SHELL", "echo srvr | nc localhost 2181 || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 30s
+      retries: 5
+      start_period: 40s
     logging: *default-logging
 
   # ==============================================
