--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -146,65 +146,35 @@ services:
     logging: *default-logging
 
   # ==============================================
-  # MONITORING - Prometheus
+  # MONITORING (Optional - Uncomment when needed)
   # ==============================================
-  prometheus:
-    image: prom/prometheus:latest
-    container_name: fabric-prometheus
-    restart: unless-stopped
-    command:
-      - "--config.file=/etc/prometheus/prometheus.yml"
-      - "--storage.tsdb.path=/prometheus"
-      - "--web.console.libraries=/usr/share/prometheus/console_libraries"
-      - "--web.console.templates=/usr/share/prometheus/consoles"
-    ports:
-      - "${PROMETHEUS_PORT:-9090}:9090"
-    volumes:
-      - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./monitoring/prometheus/alerts.yml:/etc/prometheus/alerts.yml:ro
-      - prometheus_data:/prometheus
-    networks:
-      - fabric-network
-    logging: *default-logging
+  # YAGNI: Not needed for development phase
+  # Uncomment below when ready for production monitoring
+  
+  # prometheus:
+  #   image: prom/prometheus:latest
+  #   container_name: fabric-prometheus
+  #   restart: unless-stopped
+  #   ports:
+  #     - "9090:9090"
+  #   volumes:
+  #     - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+  #     - prometheus_data:/prometheus
+  #   networks:
+  #     - fabric-network
 
-  # ==============================================
-  # MONITORING - Grafana
-  # ==============================================
-  grafana:
-    image: grafana/grafana:latest
-    container_name: fabric-grafana
-    restart: unless-stopped
-    environment:
-      GF_SECURITY_ADMIN_USER: ${GRAFANA_ADMIN_USER:-admin}
-      GF_SECURITY_ADMIN_PASSWORD: ${GRAFANA_ADMIN_PASSWORD:-admin}
-      GF_USERS_ALLOW_SIGN_UP: ${GRAFANA_ALLOW_SIGNUP:-false}
-    ports:
-      - "${GRAFANA_PORT:-3000}:3000"
-    volumes:
-      - ./monitoring/grafana/provisioning:/etc/grafana/provisioning:ro
-      - ./monitoring/grafana/dashboards:/var/lib/grafana/dashboards:ro
-      - grafana_data:/var/lib/grafana
-    networks:
-      - fabric-network
-    depends_on:
-      - prometheus
-    logging: *default-logging
-
-  # ==============================================
-  # MONITORING - AlertManager
-  # ==============================================
-  alertmanager:
-    image: prom/alertmanager:latest
-    container_name: fabric-alertmanager
-    restart: unless-stopped
-    command:
-      - "--config.file=/etc/alertmanager/alertmanager.yml"
-      - "--storage.path=/alertmanager"
-    ports:
-      - "${ALERTMANAGER_PORT:-9093}:9093"
-    volumes:
-      - ./monitoring/alertmanager/alertmanager.yml:/etc/alertmanager/alertmanager.yml:ro
-      - alertmanager_data:/alertmanager
-    networks:
-      - fabric-network
-    logging: *default-logging
+  # grafana:
+  #   image: grafana/grafana:latest
+  #   container_name: fabric-grafana
+  #   restart: unless-stopped
+  #   environment:
+  #     GF_SECURITY_ADMIN_USER: admin
+  #     GF_SECURITY_ADMIN_PASSWORD: admin
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - grafana_data:/var/lib/grafana
+  #   networks:
+  #     - fabric-network
+  #   depends_on:
+  #     - prometheus
