--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -34,6 +34,23 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
+  mail:
+    host: ${PLATFORM_SMTP_HOST:smtp.hostinger.com}
+    port: ${PLATFORM_SMTP_PORT:465}
+    username: ${PLATFORM_SMTP_USERNAME:info@storeandsale.shop}
+    password: ${PLATFORM_SMTP_PASSWORD:}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: false
+          ssl:
+            enable: true
+        from: ${PLATFORM_EMAIL_FROM:info@storeandsale.shop}
+        from-name: ${PLATFORM_EMAIL_FROM_NAME:Fabricode}
+
   flyway:
     enabled: true
     baseline-on-migrate: true
