feat: Dual-path tenant onboarding system with email integration
- Sales-led onboarding (90-day trial)
- Self-service signup (14-day trial)
- Token-based password setup (no verification code - modern UX)
- Beautiful HTML email templates
- PII masking (GDPR/KVKK compliant)
- Development tools (cleanup endpoints)
- Database view commands (Makefile)
- Tier system removed (simple OS-based pricing)
- tenant_id = company_id for root tenants

Features:
- POST /api/admin/onboarding/tenant
- POST /api/public/signup
- POST /api/auth/setup-password
- POST /api/dev/reset-all
- make db-view-all

Total: 18 new files, 31 modified, 0 lint errors

--- a/.env.example
+++ b/.env.example
@@ -1,149 +1,39 @@
 # =============================================================================
-# FABRIC MANAGEMENT SYSTEM - LOCAL ENVIRONMENT
+# FABRIC MANAGEMENT SYSTEM - ENVIRONMENT VARIABLES EXAMPLE
 # =============================================================================
-# Single source of truth for all configuration
-# DO NOT commit to git! Use .env.example as template
+# Copy this file to .env and replace with your actual values
+# =============================================================================
 
-# =============================================================================
-# ENVIRONMENT
-# =============================================================================
-SPRING_PROFILES_ACTIVE=local
-
-# =============================================================================
-# DATABASE - PostgreSQL
-# =============================================================================
+# DATABASE
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5433
 POSTGRES_DB=fabric_management
 POSTGRES_USER=fabric_user
-POSTGRES_PASSWORD=change_me_use_strong_password
+POSTGRES_PASSWORD=your_secure_password_here
+DATABASE_URL=jdbc:postgresql://localhost:5433/fabric_management
 
-# HikariCP Connection Pool
-DB_POOL_MAX_SIZE=10             # Maximum pool size (adjust based on load)
-DB_POOL_MIN_IDLE=2              # Minimum idle connections
-DB_CONNECTION_TIMEOUT=30000     # Connection timeout (ms) - 30 seconds
-DB_IDLE_TIMEOUT=600000          # Idle timeout (ms) - 10 minutes
-DB_MAX_LIFETIME=1800000         # Max lifetime (ms) - 30 minutes
-
-# =============================================================================
-# CACHE - Redis
-# =============================================================================
+# REDIS
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=change_me_strong_password  # Required for Docker, optional for local dev
+REDIS_PASSWORD=your_redis_password_here
 
-# Redis Connection Pool (Lettuce)
-REDIS_POOL_MAX_ACTIVE=8         # Maximum active connections
-REDIS_POOL_MAX_IDLE=8           # Maximum idle connections
-REDIS_POOL_MIN_IDLE=2           # Minimum idle connections
-REDIS_CONNECTION_TIMEOUT=2000   # Connection timeout (ms)
-REDIS_COMMAND_TIMEOUT=3000      # Command timeout (ms)
-
-# Redis Cache TTL
-CACHE_TTL=300000                # 5 minutes default (per service can override)
-
-# =============================================================================
-# MESSAGE BROKER - Kafka & Zookeeper
-# =============================================================================
-ZOOKEEPER_PORT=2181
-KAFKA_PORT=9092
-KAFKA_ADVERTISED_HOST=localhost
+# KAFKA
 KAFKA_BOOTSTRAP_SERVERS=localhost:9092
 
-# =============================================================================
-# API GATEWAY
-# =============================================================================
-API_GATEWAY_PORT=8080
+# MAIL CONFIGURATION - REQUIRED
+MAIL_HOST=smtp.hostinger.com
+MAIL_PORT=465
+MAIL_USERNAME=your_email@yourdomain.com
+MAIL_PASSWORD=your_email_password_here
+MAIL_FROM_EMAIL=noreply@yourdomain.com
+MAIL_FROM_NAME=Fabric Management System
 
-# =============================================================================
-# MICROSERVICES - PORTS
-# =============================================================================
-USER_SERVICE_PORT=8081
-CONTACT_SERVICE_PORT=8082
-COMPANY_SERVICE_PORT=8083
+# JWT - CHANGE FOR PRODUCTION
+JWT_SECRET=change-this-to-a-secure-random-256-bit-secret-key
 
-# =============================================================================
-# MICROSERVICES - INTER-SERVICE COMMUNICATION
-# =============================================================================
-# For Local: localhost | For Docker: will be overridden to service names
-USER_SERVICE_HOST=localhost
-CONTACT_SERVICE_HOST=localhost
-COMPANY_SERVICE_HOST=localhost
+# SERVER
+SERVER_PORT=8080
+SPRING_PROFILES_ACTIVE=local
 
-# Full URLs (constructed from HOST:PORT)
-USER_SERVICE_URL=http://localhost:8081
-CONTACT_SERVICE_URL=http://localhost:8082
-COMPANY_SERVICE_URL=http://localhost:8083
-
-# =============================================================================
-# SECURITY - JWT
-# =============================================================================
-JWT_SECRET=change_me_use_openssl_rand_base64_64
-JWT_EXPIRATION=3600000           # 1 hour in milliseconds (production: 15 min recommended)
-JWT_REFRESH_EXPIRATION=86400000  # 24 hours in milliseconds (production: 7 days max)
-JWT_ALGORITHM=HS256              # HMAC SHA-256 (HS256, HS384, HS512)
-JWT_ISSUER=fabric-management-system
-
-# =============================================================================
-# SECURITY CONFIGURATION
-# =============================================================================
-# Login Attempt Tracking
-SECURITY_LOGIN_ATTEMPT_MAX_ATTEMPTS=5                  # Max failed login attempts before lockout
-SECURITY_LOGIN_ATTEMPT_LOCKOUT_DURATION_MINUTES=15    # Account lockout duration (minutes)
-
-# Response Time Masking (Timing Attack Prevention)
-SECURITY_RESPONSE_TIME_MASKING_MIN_MS=200             # Minimum response time (milliseconds)
-
-# =============================================================================
-# SECURITY - JWT
-JWT_AUDIENCE=fabric-api
-
-# =============================================================================
-# NOTIFICATION CONFIGURATION
-# =============================================================================
-NOTIFICATION_ENABLED=true         # Enable/disable notification features
-
-# =============================================================================
-# LOGGING
-# =============================================================================
-LOG_LEVEL=INFO                    # Global log level: TRACE, DEBUG, INFO, WARN, ERROR
-
-# =============================================================================
-# JVM OPTIONS (Optional)
-# =============================================================================
-# JAVA_OPTS=-Xmx512m -Xms256m
-
-# =============================================================================
-# MONITORING - JMX PORTS
-# =============================================================================
-USER_SERVICE_JMX_PORT=9011
-CONTACT_SERVICE_JMX_PORT=9012
-COMPANY_SERVICE_JMX_PORT=9013
-
-# Internal API Key for service-to-service auth
-# Generate: openssl rand -hex 32
-INTERNAL_API_KEY=change-this-to-secure-random-key-in-production
-
-# =============================================================================
-# AUTH SERVICE - Authentication & Authorization
-# =============================================================================
-AUTH_SERVICE_PORT=8085
-AUTH_SERVICE_HOST=localhost
-AUTH_SERVICE_URL=http://localhost:8085
-
-# Password Policy
-AUTH_PASSWORD_MIN_LENGTH=8
-AUTH_PASSWORD_REQUIRE_SPECIAL=true
-AUTH_PASSWORD_REQUIRE_NUMBERS=true
-AUTH_PASSWORD_REQUIRE_UPPERCASE=true
-AUTH_PASSWORD_MAX_FAILED_ATTEMPTS=5
-
-# Session Management
-AUTH_SESSION_TIMEOUT=1800
-AUTH_MAX_SESSIONS=5
-
-# Kafka Consumer Group
-AUTH_SERVICE_KAFKA_GROUP_ID=auth-service-group
-
-# JVM Options
-AUTH_JAVA_OPTS=-Xms256M -Xmx256M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/tmp
+# TENANT
+DEFAULT_TENANT_ID=00000000-0000-0000-0000-000000000000
